--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://orfus-group.github.io/AsramWebsite-FE/",
   "name": "asramwebsite",
   "private": true,
   "version": "0.0.0",
@@ -8,7 +9,6 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
   "deploy": "gh-pages -d dist"
   },
   "dependencies": {
