--- a/asramwebsite-cms/package.json
+++ b/asramwebsite-cms/package.json
@@ -1,45 +1,43 @@
 {
-  "homepage": "https://orfus-group.github.io/AsramWebsite-FE/",
-  "name": "asramwebsite",
+  "name": "asramwebsite-cms",
   "private": true,
-  "workspaces": [
-    "asramwebsite-cms"
-  ],
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Orfus-Group.github.io/AsramWebsiteCMS-FE",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -b gh-pages",
-    "cms:dev": "cd asramwebsite-cms && npm run dev",
-    "cms:install": "cd asramwebsite-cms && npm install"
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.11.0",
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^11.0.1",
+    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
-    "framer-motion": "^12.23.26",
+    "moment": "^2.30.1",
+    "rc-time-picker": "^3.7.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.10.0"
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
   }
 }
